--- a/style.css
+++ b/style.css
@@ -1,122 +1,30 @@
-/* Global Styles */ 
-
-
-html {
-  background-color: #F8F4E9; /* Changed color from black to match Omeka theme */
-    
-}
-
-/* Added this to override padding that Omeka theme was adding to map selectors*/
-label {
-    padding-top: 0em;
-    padding-bottom: 0em;
-}
-/* Div that makes the map image above the footer work. */
-#bottom-map {
-        background-image:url(http://www.indiana.edu/~kdglobal/omeka/themes/sepia-nostalgia/images/ColtonsGeneralAtlasoftheWorld.jpg);
-    padding-bottom: 150px;
-border-top: 8px solid #AC5116}
-
-#map {
-  margin-top: 1%;
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid #F8F4E9; /* Changed color to match Omeka theme */
-  height: 65%;
-  width: 85%;
-}
-
-.icon-hint {
-  height: 15px;
-  width: 20px;
-}
-
-.overlay-icon {
-  margin: 0px 2px 0px 0px;
-}
-
-#timeline-group {
-  
-  margin-top: auto;
-  margin-left: auto;
-  margin-right: auto;
-  height: 20%;
-  
-}
-
-#current-year {
-  text-align: center;
-  font-weight: bold;
-  color: #451401; /* Changed color to match Omeka theme */
-}
-
-#slider {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 20px;
-  width: 80%;
-}
-
-#control-group {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-#control-group ul {
-  clear:left;
-  float:left;
-  list-style:none;
-  margin:0;
-  padding:0;
-  position:relative;
-  left:50%;
-  text-align:center;
-}
-
-#control-group ul li {
-  display:block;
-  float:left;
-  list-style:none;
-  margin:0;
-  padding:0;
-  position:relative;
-  right:50%;
-  margin-bottom: 5%;
-}
-
-#control-group ul li button {
-  display:block;
-  margin:0 0 0 1px;
-  padding:3px 10px;
-  text-decoration:none;
-  line-height:1.3em;
-}
-
-.button-icon {
-  max-height: 30px;
-  max-width: 30px;
-}
-
-.leaflet-control-layers-group .ui-widget {
-	font: 12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;
-  font-weight: bold;
-}
-
-.leaflet-control-layers-group .ui-state-default {
-  background: #EFEFEF;
-}
-
-.leaflet-control-layers-group .ui-state-hover {
-  background: #DADADA;
-}
-
-.leaflet-control-layers-group .ui-corner-all {
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-}
-
-.ui-button-text-only .ui-button-text {
-  padding: 0.4em 0.75em;
-}
+body{font-family:"Volkhov",Cambria,Georgia,serif;font-size:16px;font-weight:300;line-height:24px;word-wrap:break-word;}
+html{background-color:#F8F4E9;}
+label{padding-top:0em;padding-bottom:0em;color:#451401;}
+#bottom-map{background-image:url(http://globalization1789-1861.indiana.edu/exhibit/images/ColtonsGeneralAtlasoftheWorld.jpg);margin-top:29px;padding-bottom:150px;border-top:8px solid #ac5116;}
+#map{margin-top:13px;margin-left:auto;margin-right:auto;border:1px solid #451401;height:65%;width:85%;}
+.icon-hint{height:15px;width:20px;}
+.overlay-icon{margin:0px 2px 0px 0px;}
+#timeline-group{margin-top:auto;margin-left:auto;margin-right:auto;height:20%;}
+#current-year{margin-left:auto;margin-right:auto;text-align:center;font-size:20px !important;font-weight:bold;color:#e8dab8;width:252px;padding:3px 0;border:1px solid #451401;background-color:#803402;}
+#slider{margin-left:auto;margin-right:auto;margin-bottom:20px;width:80%;}
+#control-group{margin-left:auto;margin-right:auto;}
+#control-group ul{clear:left;float:left;list-style:none;margin:0;padding:0;position:relative;left:50%;text-align:center;}
+#control-group ul li{display:block;float:left;list-style:none;margin:0;padding:0;position:relative;right:50%;margin-bottom:28px;color:#e8dab8 !important;}
+#control-group ul li button{display:block;margin:0 0 0 1px;padding:3px 10px;text-decoration:none;line-height:1.3em;background-color:#ac5116;}
+.button-icon{max-height:30px;max-width:30px;}
+#map-menu{font-size:20px !important;float:right !important;margin-top:40px;margin-bottom:86px;line-height:40px;text-align:right;}
+#map-menu a{padding:2px 8px !important;}
+#map-menu a:active{background-color:#ac5116;color:#e8dab8;}
+#map-menu a:hover{background-color:#803402 !important;color:#e8dab8;}
+#map-menu a:link{background-color:#ac5116;color:#e8dab8;}
+#map-menu a:visited{background-color:#ac5116;color:#e8dab8;}
+.leaflet-control-layers-group .ui-widget{font:12px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;color:#e8dab8;font-weight:bold;}
+.leaflet-control-layers-group .ui-state-default{background:#ac5116;}
+.leaflet-control-layers-group .ui-state-hover{background:#803402;}
+.leaflet-control-layers-group .ui-corner-all{border-bottom-left-radius:0px;border-bottom-right-radius:0px;border-top-left-radius:0px;border-top-right-radius:0px;border:1px solid #451401 !important;}
+.ui-button-text-only .ui-button-text{padding:2px 16px !important;}
+.ui-widget-content{border:1px solid #ac5116 !important;}
+.ui-state-default{border:1px solid #451401 !important;background:#ac5116 !important;}
+.ui-state-hover{background:#803402 !important;}
+.leaflet-control-layers-toggle{background-image:url("map-data.png") !important;background-size:160px 50px !important;height:50px !important;width:160px !important;border:1px solid #451401;}
